--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
     "@types/aws-lambda": "^8.10.130",
     "uuid": "^9.0.1",
     "@types/uuid": "^9.0.7",
-    "@aws-sdk/client-cloudformation": "^3.474.0",
     "@aws-sdk/client-iam": "^3.474.0",
     "@aws-sdk/credential-providers": "^3.474.0",
     "jszip": "^3.10.1"
@@ -23,7 +22,7 @@
     "esbuild": "^0.19.9"
   },
   "scripts": {
-    "build": "yarn clean && ts-node scripts/build.ts",
+    "build": "yarn clean && ts-node src/scripts/build.ts",
     "deploy": "ts-node src/scripts/deploy.ts",
     "deploy:dev": "yarn deploy --stage=dev",
     "deploy:prod": "yarn deploy --stage=prod",
