--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,6 +25,6 @@
       "@/types/*": ["../types/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../types/deck.ts"],
   "exclude": ["node_modules"]
 }
