--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
   "@react-aria/visually-hidden": "3.8.18",
   "autoprefixer": "^10.4.16",
   "aws-sdk": "^2.1692.0",
+  "aws-amplify": "^6.0.0",
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
