--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "fe:start": "cd frontend && yarn start"
  },
  "dependencies": {
-  "aws-sdk": "^2.1692.0"
+  "aws-sdk": "^2.1692.0",
+    "aws-amplify": "^6.13.0"
  },
  "devDependencies": {
   "@next/eslint-plugin-next": "15.0.4",
