--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,8 @@
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
   "autoprefixer": "^10.4.16",
-  "aws-sdk": "^2.1692.0",
   "aws-amplify": "^6.0.0",
+  "aws-sdk": "^2.1692.0",
   "clsx": "2.1.1",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
@@ -35,6 +35,7 @@
   "postcss": "^8.4.31",
   "react": "^18.2.0",
   "react-dom": "^18.2.0",
+  "react-toastify": "^11.0.3",
   "tailwindcss": "^3.4.0",
   "zustand": "^5.0.3"
  },
