--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.474.0",
     "@aws-sdk/client-cloudfront": "^3.474.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.749.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
     "@aws-sdk/client-dynamodb": "^3.474.0",
     "@aws-sdk/client-iam": "^3.474.0",
@@ -13,6 +14,7 @@
     "@aws-sdk/lib-dynamodb": "^3.474.0",
     "@types/aws-lambda": "^8.10.130",
     "@types/uuid": "^9.0.7",
+    "aws-jwt-verify": "^5.0.0",
     "dotenv": "^16.4.7",
     "jszip": "^3.10.1",
     "uuid": "^9.0.1"
